# extract

./: .gitignore  LICENSE  README.md  demo.cast  extract.sh  pyproject.toml
docs/: usage.md
extract/: __init__.py  archive.py  cli.py  formats.py  utils.py
extract.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_plain_tar.py  test_tar.py  test_zip.py
tests/fixtures/: sample.tar.bz2  sample.tar.xz
