[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extract"
version = "1.0.0"
description = "Universal archive extraction tool"
requires-python = ">=3.11"

[project.scripts]
extract = "extract.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["."]
include = ["extract*"]
